--- a/README.ipynb
+++ b/README.ipynb
@@ -72,6 +72,7 @@
     "- [Horizontal Bar Charts](#horizontal-bar-charts)\n",
     "- [Vertical Bar Charts](#vertical-bar-charts)\n",
     "- [Line Charts](#line-charts)\n",
+    "- [Scatter Charts](#scatter-charts)\n",
     "\n",
     "#### Horizontal Bar Charts"
    ]
