Update examples and 0.1.11 release
Former-commit-id: c5ef33d09637e652eae7aeb9b4826675ea55530d

--- a/README.ipynb
+++ b/README.ipynb
@@ -119,6 +119,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "def current_total(values):\n",
+    "    total = values.sum()\n",
+    "    s = f'Total : {int(total)}'\n",
+    "    return {'x': .85, 'y': .2, 's': s, 'ha': 'right', 'size': 11}\n",
+    "\n",
+    "covid_df.plot_animated(filename='examples/summary-func-example.gif',period_summary_func=current_total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Summary Func Example](examples/summary-func-example.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pandas_alive\n",
+    "\n",
+    "elec_df = pd.read_csv(\"data/Aus_Elec_Gen_1980_2018.csv\",index_col=0,parse_dates=[0],thousands=',')\n",
+    "\n",
+    "elec_df.fillna(0).plot_animated('examples/fixed-example.gif',period_fmt=\"%Y\",title='Australian Electricity Generation Sources 1980-2018',fixed_max=True,fixed_order=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Fixed Example](examples/fixed-example.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "covid_df.plot_animated(filename='examples/perpendicular-example.gif',perpendicular_bar_func='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Perpendicular Example](examples/perpendicular-example.gif)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -313,6 +379,15 @@
     "## Contributing\n",
     "\n",
     "Pull requests are welcome! Please help to cover more and more chart types!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Changelog](CHANGELOG.md)\n",
+    "\n",
+    "[Changelog](CHANGELOG.md)"
    ]
   },
   {
