--- a/README.ipynb
+++ b/README.ipynb
@@ -349,6 +349,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "import pandas as pd\n",
+    "\n",
+    "data_raw = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/owid/owid-datasets/master/datasets/Long%20run%20life%20expectancy%20-%20Gapminder%2C%20UN/Long%20run%20life%20expectancy%20-%20Gapminder%2C%20UN.csv\"\n",
+    ")\n",
+    "\n",
+    "list_G7 = [\n",
+    "    \"Canada\",\n",
+    "    \"France\",\n",
+    "    \"Germany\",\n",
+    "    \"Italy\",\n",
+    "    \"Japan\",\n",
+    "    \"United Kingdom\",\n",
+    "    \"United States\",\n",
+    "]\n",
+    "\n",
+    "data_raw = data_raw.pivot(\n",
+    "    index=\"Year\", columns=\"Entity\", values=\"Life expectancy (Gapminder, UN)\"\n",
+    ")\n",
+    "\n",
+    "data = pd.DataFrame()\n",
+    "data[\"Year\"] = data_raw.reset_index()[\"Year\"]\n",
+    "for country in list_G7:\n",
+    "    data[country] = data_raw[country].values\n",
+    "\n",
+    "data = data.fillna(method=\"pad\")\n",
+    "data = data.fillna(0)\n",
+    "data = data.set_index(\"Year\").loc[1900:].reset_index()\n",
+    "\n",
+    "data[\"Year\"] = pd.to_datetime(data.reset_index()[\"Year\"].astype(str))\n",
+    "\n",
+    "data = data.set_index(\"Year\")\n",
+    "\n",
+    "animated_bar_chart = data.plot_animated(\n",
+    "    period_fmt=\"%Y\",perpendicular_bar_func=\"mean\", period_length=200,fixed_max=True\n",
+    ")\n",
+    "\n",
+    "animated_line_chart = data.plot_animated(\n",
+    "    kind=\"line\", period_fmt=\"%Y\", period_length=200,fixed_max=True\n",
+    ")\n",
+    "\n",
+    "pandas_alive.animate_multiple_plots(\n",
+    "    \"examples/life-expectancy.gif\",\n",
+    "    plots=[animated_bar_chart, animated_line_chart],\n",
+    "    title=\"Life expectancy in G7 countries up to 2015\",\n",
+    "    adjust_subplot_left=0.2,\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
