--- a/README.ipynb
+++ b/README.ipynb
@@ -285,6 +285,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Pie Chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "covid_df.plot_animated(filename='examples/example-pie-chart.gif',kind=\"pie\",rotatelabels=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multiple Charts\n",
     "\n",
     "`pandas_alive` supports multiple animated charts in a single visualisation.\n",
@@ -306,7 +326,7 @@
     "\n",
     "animated_line_chart = covid_df.diff().fillna(0).plot_animated(kind='line',period_label=False)\n",
     "\n",
-    "animated_bar_chart = covid_df.plot_animated(kind='barh',n_visible=10)\n",
+    "animated_bar_chart = covid_df.plot_animated(n_visible=10)\n",
     "\n",
     "pandas_alive.animate_multiple_plots('examples/example-bar-and-line-chart.gif',[animated_bar_chart,animated_line_chart])"
    ]
@@ -336,7 +356,7 @@
     "    .plot_animated(kind=\"line\", title=\"Total % Change in Population\",period_label=False)\n",
     ")\n",
     "\n",
-    "animated_bar_chart = urban_df.plot_animated(kind='barh',n_visible=10,title='Top 10 Populous Countries',period_fmt=\"%Y\")\n",
+    "animated_bar_chart = urban_df.plot_animated(n_visible=10,title='Top 10 Populous Countries',period_fmt=\"%Y\")\n",
     "\n",
     "pandas_alive.animate_multiple_plots('examples/example-bar-and-line-urban-chart.gif',[animated_bar_chart,animated_line_chart],title='Urban Population 1977 - 2018',adjust_subplot_top=0.85)"
    ]
@@ -402,6 +422,13 @@
     "    title=\"Life expectancy in G7 countries up to 2015\",\n",
     "    adjust_subplot_left=0.2,\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Life Expectancy Chart](examples/life-expectancy.gif)"
    ]
   },
   {
