Update README to include pie
Former-commit-id: 9050738d96daca4687348e0d108b2955aa836525

--- a/README.ipynb
+++ b/README.ipynb
@@ -73,6 +73,7 @@
     "- [Vertical Bar Charts](#vertical-bar-charts)\n",
     "- [Line Charts](#line-charts)\n",
     "- [Scatter Charts](#scatter-charts)\n",
+    "- [Pie Charts](#pie-charts)\n",
     "\n",
     "#### Horizontal Bar Charts"
    ]
@@ -285,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pie Chart"
+    "#### Pie Charts"
    ]
   },
   {
@@ -299,6 +300,13 @@
     "covid_df = pandas_alive.load_dataset()\n",
     "\n",
     "covid_df.plot_animated(filename='examples/example-pie-chart.gif',kind=\"pie\",rotatelabels=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example Pie Chart](examples/example-pie-chart.gif)"
    ]
   },
   {
