--- a/README.ipynb
+++ b/README.ipynb
@@ -443,6 +443,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Future Features\n",
+    "\n",
+    "A list of future features that may/may not be developed is:\n",
+    "\n",
+    "- Multiple dimension plots (with multi indexed dataframes)\n",
+    "- Bubble charts\n",
+    "- Geographic charts (currently using OSM export image, potential [cartopy](https://github.com/SciTools/cartopy))\n",
+    "\n",
+    "A chart that was built using a development branch of Pandas_Alive can be found:\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/qyqiYrtpxRE\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inspiration\n",
     "\n",
     "The inspiration for this project comes from:\n",
