Show gif in readme and only rebuild on jacks push

--- a/README.ipynb
+++ b/README.ipynb
@@ -347,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Urban Population"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -374,6 +381,13 @@
    "metadata": {},
    "source": [
     "![Urban Population Bar & Line Chart](examples/example-bar-and-line-urban-chart.gif)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Life Expectancy in G7 Countries"
    ]
   },
   {
@@ -451,9 +465,9 @@
     "- Bubble charts\n",
     "- Geographic charts (currently using OSM export image, potential [cartopy](https://github.com/SciTools/cartopy))\n",
     "\n",
-    "A chart that was built using a development branch of Pandas_Alive can be found:\n",
+    "A chart that was built using a development branch of Pandas_Alive is:\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/qyqiYrtpxRE\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+    "[![NSW COVID19 Cases](examples/nsw-covid.gif)](https://www.youtube.com/watch?v=qyqiYrtpxRE)"
    ]
   },
   {
