Add TOC generation

--- a/README.ipynb
+++ b/README.ipynb
@@ -21,6 +21,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- START doctoc generated TOC please keep comment here to allow auto update -->\n",
+    "<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->\n",
+    "<!-- END doctoc generated TOC please keep comment here to allow auto update -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation\n",
     "\n",
     "Install with `pip install pandas_alive`\n",
