--- a/README.ipynb
+++ b/README.ipynb
@@ -516,9 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Changelog](CHANGELOG.md)\n",
-    "\n",
-    "[Changelog](CHANGELOG.md)"
+    "## [Changelog](CHANGELOG.md)"
    ]
   },
   {
