--- a/README.ipynb
+++ b/README.ipynb
@@ -594,9 +594,9 @@
     "\n",
     "A list of future features that may/may not be developed is:\n",
     "\n",
-    "- Multiple dimension plots (with multi indexed dataframes)\n",
-    "- Bubble charts\n",
-    "- Geographic charts (currently using OSM export image, potential [cartopy](https://github.com/SciTools/cartopy))\n",
+    "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
+    "- Label events by dates\n",
+    "- Documentation CI improvement ([pydocstyle](https://github.com/PyCQA/pydocstyle) & [interrogate](https://pypi.org/project/interrogate/))\n",
     "\n",
     "A chart that was built using a development branch of Pandas_Alive is:\n",
     "\n",
