Update README & v0.1.13 release
Former-commit-id: 62f6cb1bd1ce3e3b1ea4025761673996d4b8cc61

--- a/README.ipynb
+++ b/README.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "Animated plotting extension for Pandas with Matplotlib\n",
     "\n",
+    "[![Inline docs](http://inch-ci.org/github/dwyl/hapi-auth-jwt2.svg?branch=master)](https://jackmckew.github.io/pandas_alive/) [![PyPI download month](https://img.shields.io/pypi/dm/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI version shields.io](https://img.shields.io/pypi/v/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI license](https://img.shields.io/pypi/l/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![saythanks](https://img.shields.io/badge/say-thanks-ff69b4.svg)](https://www.buymeacoffee.com/jackmckew)\n",
+    "\n",
     "**Pandas_Alive** is intended to provide a plotting backend for animated [matplotlib](https://matplotlib.org/) charts for [Pandas](https://pandas.pydata.org/) DataFrames, similar to the already [existing Visualization feature of Pandas](https://pandas.pydata.org/pandas-docs/stable/visualization.html).\n",
     "\n",
     "With **Pandas_Alive**, creating stunning, animated visualisations is as easy as calling:\n",
@@ -47,7 +49,6 @@
     "The data below is an example of properly formatted data. It shows total deaths from COVID-19 for the highest 20 countries by date.\n",
     "\n",
     "![Example Data Table](https://raw.githubusercontent.com/dexplo/bar_chart_race/master/images/wide_data.png)\n",
-    "[Example Table](examples/example_dataset_table.md)\n",
     "\n",
     "To produce the above visualisation:\n",
     "\n",
@@ -75,15 +76,6 @@
    "metadata": {},
    "source": [
     "### Currently Supported Chart Types\n",
-    "\n",
-    "`pandas_alive` current supports:\n",
-    "\n",
-    "- [Horizontal Bar Chart Races](#horizontal-bar-chart-races)\n",
-    "- [Vertical Bar Chart Races](#vertical-bar-chart-races)\n",
-    "- [Line Charts](#line-charts)\n",
-    "- [Scatter Charts](#scatter-charts)\n",
-    "- [Pie Charts](#pie-charts)\n",
-    "- [Bubble Charts](#bubble-charts)\n",
     "\n",
     "#### Horizontal Bar Chart Races"
    ]
@@ -235,6 +227,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Bar Charts\n",
+    "\n",
+    "Similar to line charts with time as the x-axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "covid_df.sum(axis=1).fillna(0).plot_animated(filename='examples/example-bar-chart.gif',kind='bar',period_label={'x':0.1,'y':0.9})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example Bar Chart](examples/example-bar-chart.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Scatter Charts"
    ]
   },
@@ -329,6 +350,13 @@
     "    y_data_label=\"Latitude\",\n",
     "    size_data_label=\"Cases\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Bubble Chart Example](examples/example-bubble-chart.gif)"
    ]
   },
   {
@@ -595,8 +623,7 @@
     "A list of future features that may/may not be developed is:\n",
     "\n",
     "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
-    "- Label events by dates\n",
-    "- Documentation CI improvement ([pydocstyle](https://github.com/PyCQA/pydocstyle) & [interrogate](https://pypi.org/project/interrogate/))\n",
+    "- Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))\n",
     "\n",
     "A chart that was built using a development branch of Pandas_Alive is:\n",
     "\n",
