Add progress bars!

--- a/README.ipynb
+++ b/README.ipynb
@@ -507,6 +507,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### HTML 5 Videos\n",
+    "\n",
+    "`Pandas_Alive` supports rendering HTML5 videos through the use of `df.plot_animated().get_html5_video()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "animated_html = covid_df.plot_animated().get_html5_video()\n",
+    "\n",
+    "HTML(animated_html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Progress Bars!\n",
+    "\n",
+    "Generating animations can take some time, so enable progress bars by installing [tqdm](https://github.com/tqdm/tqdm) with `pip install tqdm` and using the keyword `enable_progress_bar=True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_alive\n",
+    "\n",
+    "covid_df = pandas_alive.load_dataset()\n",
+    "\n",
+    "covid_df.plot_animated(enable_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Future Features\n",
     "\n",
     "A list of future features that may/may not be developed is:\n",
@@ -540,8 +591,9 @@
     "\n",
     "- [ffmpeg](https://ffmpeg.org/)\n",
     "- [ImageMagick](https://imagemagick.org/index.php)\n",
-    "- [Pillow](https://pillow.readthedocs.io/en/stable/)\n",
     "- See more at <https://matplotlib.org/3.2.1/api/animation_api.html#writer-classes>\n",
+    "\n",
+    "> Pillow is not supported currently, please submit a PR if you can make Pillow work!\n",
     "\n",
     "## Documentation\n",
     "\n",
