Include html5 and progress bar in readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -509,7 +509,9 @@
    "source": [
     "### HTML 5 Videos\n",
     "\n",
-    "`Pandas_Alive` supports rendering HTML5 videos through the use of `df.plot_animated().get_html5_video()`."
+    "`Pandas_Alive` supports rendering HTML5 videos through the use of `df.plot_animated().get_html5_video()`. `.get_html5_video` saves the animation as an h264 video, encoded in base64 directly into the HTML5 video tag. This respects the rc parameters for the writer as well as the bitrate. This also makes use of the interval to control the speed, and uses the repeat parameter to decide whether to loop.\n",
+    "\n",
+    "This is typically used in Jupyter notebooks."
    ]
   },
   {
@@ -563,7 +565,7 @@
     "A list of future features that may/may not be developed is:\n",
     "\n",
     "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
-    "- Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))\n",
+    "- ~~Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))~~\n",
     "\n",
     "A chart that was built using a development branch of Pandas_Alive is:\n",
     "\n",
@@ -592,6 +594,8 @@
     "- [ffmpeg](https://ffmpeg.org/)\n",
     "- [ImageMagick](https://imagemagick.org/index.php)\n",
     "- See more at <https://matplotlib.org/3.2.1/api/animation_api.html#writer-classes>\n",
+    "\n",
+    "> Outputting to GIF file type is only supported by ImageMagick\n",
     "\n",
     "> Pillow is not supported currently, please submit a PR if you can make Pillow work!\n",
     "\n",
