--- a/README.ipynb
+++ b/README.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Animated plotting extension for Pandas with Matplotlib\n",
     "\n",
-    "[![Inline docs](http://inch-ci.org/github/dwyl/hapi-auth-jwt2.svg?branch=master)](https://jackmckew.github.io/pandas_alive/) ![Interrogate Badge](https://raw.githubusercontent.com/JackMcKew/pandas_alive/master/badges/interrogate_badge.svg) [![PyPI download month](https://img.shields.io/pypi/dm/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI version shields.io](https://img.shields.io/pypi/v/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI license](https://img.shields.io/pypi/l/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![saythanks](https://img.shields.io/badge/say-thanks-ff69b4.svg)](https://www.buymeacoffee.com/jackmckew)\n",
+    "[![Inline docs](http://inch-ci.org/github/dwyl/hapi-auth-jwt2.svg?branch=master)](https://jackmckew.github.io/pandas_alive/) [![PyPI download month](https://img.shields.io/pypi/dm/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI version shields.io](https://img.shields.io/pypi/v/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![PyPI license](https://img.shields.io/pypi/l/pandas_alive.svg)](https://pypi.python.org/pypi/pandas_alive/) [![saythanks](https://img.shields.io/badge/say-thanks-ff69b4.svg)](https://www.buymeacoffee.com/jackmckew)\n",
     "\n",
     "**Pandas_Alive** is intended to provide a plotting backend for animated [matplotlib](https://matplotlib.org/) charts for [Pandas](https://pandas.pydata.org/) DataFrames, similar to the already [existing Visualization feature of Pandas](https://pandas.pydata.org/pandas-docs/stable/visualization.html).\n",
     "\n",
@@ -540,7 +540,9 @@
    "source": [
     "### Progress Bars!\n",
     "\n",
-    "Generating animations can take some time, so enable progress bars by installing [tqdm](https://github.com/tqdm/tqdm) with `pip install tqdm` and using the keyword `enable_progress_bar=True`."
+    "Generating animations can take some time, so enable progress bars by installing [tqdm](https://github.com/tqdm/tqdm) with `pip install tqdm` and using the keyword `enable_progress_bar=True`.\n",
+    "\n",
+    "By default Pandas_Alive will create a `tqdm` progress bar for the number of frames to animate, and update the progres bar after each frame."
    ]
   },
   {
@@ -554,6 +556,15 @@
     "covid_df = pandas_alive.load_dataset()\n",
     "\n",
     "covid_df.plot_animated(enable_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of TQDM in action:\n",
+    "\n",
+    "![TQDM Example](https://raw.githubusercontent.com/tqdm/tqdm/master/images/tqdm.gif)"
    ]
   },
   {
