--- a/README.ipynb
+++ b/README.ipynb
@@ -577,6 +577,7 @@
     "\n",
     "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
     "- ~~Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))~~\n",
+    "- Potentially support writing to GIF in memory with <https://github.com/maxhumber/gif>\n",
     "\n",
     "A chart that was built using a development branch of Pandas_Alive is:\n",
     "\n",
