--- a/README.ipynb
+++ b/README.ipynb
@@ -576,6 +576,7 @@
     "A list of future features that may/may not be developed is:\n",
     "\n",
     "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
+    "    - This is currently working at a proof of concept level, stay tuned!\n",
     "- ~~Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))~~\n",
     "- Potentially support writing to GIF in memory with <https://github.com/maxhumber/gif>\n",
     "\n",
