--- a/README.ipynb
+++ b/README.ipynb
@@ -363,6 +363,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### GeoSpatial Charts\n",
+    "\n",
+    "GeoSpatial charts can now be animated easily using [`geopandas`](https://geopandas.org/index.html)!\n",
+    "\n",
+    "> If using Windows, [anaconda](https://www.anaconda.com/) is the easiest way to install with all GDAL dependancies.\n",
+    "\n",
+    "Must begin with a `geopandas` GeoDataFrame containing 'wide' data where:\n",
+    "\n",
+    "- Every row represents a single geometry (Point or Polygon).\n",
+    "    - The index contains the geometry label (optional)\n",
+    "- Each column represents a single period in time.\n",
+    "\n",
+    "> These can be easily composed by transposing data compatible with the rest of the charts using `df = df.T`.\n",
+    "\n",
+    "##### GeoSpatial Point Charts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas\n",
+    "import pandas_alive\n",
+    "import contextily\n",
+    "\n",
+    "gdf = geopandas.read_file('data/nsw-covid19-cases-by-postcode.gpkg')\n",
+    "gdf.index = gdf.postcode\n",
+    "gdf = gdf.drop('postcode',axis=1)\n",
+    "\n",
+    "map_chart = gdf.plot_animated(filename='examples/example-geo-point-chart.gif',basemap_format={'source':contextily.providers.Stamen.Terrain})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example Point GeoSpatialChart](examples/example-geo-point-chart.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Polygon GeoSpatial Charts\n",
+    "\n",
+    "Supports GeoDataFrames containing Polygons!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas\n",
+    "import pandas_alive\n",
+    "import contextily\n",
+    "\n",
+    "gdf = geopandas.read_file('data/italy-covid-region.gpkg')\n",
+    "gdf.index = gdf.region\n",
+    "gdf = gdf.drop('region',axis=1)\n",
+    "\n",
+    "map_chart = gdf.plot_animated(filename='examples/example-geo-polygon-chart.gif',basemap_format={'source':contextily.providers.Stamen.Terrain})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Example Polygon GeoSpatialChart](examples/example-geo-polygon-chart.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multiple Charts\n",
     "\n",
     "`pandas_alive` supports multiple animated charts in a single visualisation.\n",
@@ -631,8 +709,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python38164bitenvvenvda985b7f1856486192683202ff92d5bf",
-   "display_name": "Python 3.8.1 64-bit ('.env': venv)"
+   "name": "python38364bitgeopandasenvcondae53cb4111ad246978ee51c976353b113",
+   "display_name": "Python 3.8.3 64-bit ('geopandas_env': conda)"
   }
  },
  "nbformat": 4,
