Update future charts

--- a/README.ipynb
+++ b/README.ipynb
@@ -657,10 +657,13 @@
     "    - This is currently working at a proof of concept level, stay tuned!\n",
     "- ~~Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))~~\n",
     "- Potentially support writing to GIF in memory with <https://github.com/maxhumber/gif>\n",
+    "- Support custom figures & axes for multiple plots (eg, gridspec)\n",
     "\n",
-    "A chart that was built using a development branch of Pandas_Alive is:\n",
+    "Some charts that was built using a development branch of Pandas_Alive is:\n",
     "\n",
-    "[![NSW COVID19 Cases](examples/nsw-covid.gif)](https://www.youtube.com/watch?v=qyqiYrtpxRE)"
+    "[![NSW COVID19 Cases](examples/nsw-covid.gif)](https://www.youtube.com/watch?v=hkn-RXY_qUo)\n",
+    "\n",
+    "[![Italy COVID19 Cases](examples/italy-covid.gif)](https://youtu.be/vxAjqgFSRvQ)"
    ]
   },
   {
