Update examples and add pillow
Former-commit-id: a5a4a1baf67a16ba829b2a0f1777b72ea9f787ef [formerly ec1d6ba3cf7c6d3c1abc73b2ae840c0764d5181a]
Former-commit-id: 210c340f759e12c195bc975fcb6d804468510eaa

--- a/README.ipynb
+++ b/README.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## Usage\n",
     "\n",
-    "As this package builds upon [`bar_chart_race`](https://github.com/dexplo/bar_chart_race), the example data set is sourced from there.\n",
+    "As this package was inspired by [`bar_chart_race`](https://github.com/dexplo/bar_chart_race), the example data set is sourced from there.\n",
     "\n",
     "Must begin with a pandas DataFrame containing 'wide' data where:\n",
     "\n",
@@ -699,7 +699,11 @@
     "\n",
     "## Contributing\n",
     "\n",
-    "Pull requests are welcome! Please help to cover more and more chart types!"
+    "Pull requests are welcome! Please help to cover more and more chart types!\n",
+    "\n",
+    "### Development\n",
+    "\n",
+    "To get started in development, clone a copy of this repository to your PC. This will now enable you to create a Jupyter notebook or a standalone `.py` file, and import `pandas_alive` as a local module. Now you can create new chart types in `pandas_alive/charts.py` or `pandas_alive/geocharts.py` to build to your hearts content!"
    ]
   },
   {
