Examples before next release

--- a/README.ipynb
+++ b/README.ipynb
@@ -585,6 +585,295 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### NSW COVID Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas\n",
+    "import pandas as pd\n",
+    "import pandas_alive\n",
+    "import contextily\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import urllib.request, json\n",
+    "\n",
+    "with urllib.request.urlopen(\n",
+    "    \"https://data.nsw.gov.au/data/api/3/action/package_show?id=aefcde60-3b0c-4bc0-9af1-6fe652944ec2\"\n",
+    ") as url:\n",
+    "    data = json.loads(url.read().decode())\n",
+    "\n",
+    "# Extract url to csv component\n",
+    "covid_nsw_data_url = data[\"result\"][\"resources\"][0][\"url\"]\n",
+    "\n",
+    "# Read csv from data API url\n",
+    "nsw_covid = pd.read_csv(covid_nsw_data_url)\n",
+    "postcode_dataset = pd.read_csv(\"data/postcode-data.csv\")\n",
+    "\n",
+    "# Prepare data from NSW health dataset\n",
+    "\n",
+    "\n",
+    "nsw_covid = nsw_covid.fillna(9999)\n",
+    "nsw_covid[\"postcode\"] = nsw_covid[\"postcode\"].astype(int)\n",
+    "\n",
+    "grouped_df = nsw_covid.groupby([\"notification_date\", \"postcode\"]).size()\n",
+    "grouped_df = pd.DataFrame(grouped_df).unstack()\n",
+    "grouped_df.columns = grouped_df.columns.droplevel().astype(str)\n",
+    "\n",
+    "grouped_df = grouped_df.fillna(0)\n",
+    "grouped_df.index = pd.to_datetime(grouped_df.index)\n",
+    "\n",
+    "cases_df = grouped_df\n",
+    "\n",
+    "# Clean data in postcode dataset prior to matching\n",
+    "\n",
+    "grouped_df = grouped_df.T\n",
+    "postcode_dataset = postcode_dataset[postcode_dataset['Longitude'].notna()]\n",
+    "postcode_dataset = postcode_dataset[postcode_dataset['Longitude'] != 0]\n",
+    "postcode_dataset = postcode_dataset[postcode_dataset['Latitude'].notna()]\n",
+    "postcode_dataset = postcode_dataset[postcode_dataset['Latitude'] != 0]\n",
+    "postcode_dataset['Postcode'] = postcode_dataset['Postcode'].astype(str)\n",
+    "\n",
+    "# Build GeoDataFrame from Lat Long dataset and make map chart\n",
+    "grouped_df['Longitude'] = grouped_df.index.map(postcode_dataset.set_index('Postcode')['Longitude'].to_dict())\n",
+    "grouped_df['Latitude'] = grouped_df.index.map(postcode_dataset.set_index('Postcode')['Latitude'].to_dict())\n",
+    "gdf = geopandas.GeoDataFrame(\n",
+    "    grouped_df, geometry=geopandas.points_from_xy(grouped_df.Longitude, grouped_df.Latitude),crs=\"EPSG:4326\")\n",
+    "gdf = gdf.dropna()\n",
+    "\n",
+    "# Prepare GeoDataFrame for writing to geopackage\n",
+    "gdf = gdf.drop(['Longitude','Latitude'],axis=1)\n",
+    "gdf.columns = gdf.columns.astype(str)\n",
+    "gdf['postcode'] = gdf.index\n",
+    "gdf.to_file(\"data/nsw-covid19-cases-by-postcode.gpkg\", layer='nsw-postcode-covid', driver=\"GPKG\")\n",
+    "\n",
+    "# Prepare GeoDataFrame for plotting\n",
+    "gdf.index = gdf.postcode\n",
+    "gdf = gdf.drop('postcode',axis=1)\n",
+    "gdf = gdf.to_crs(\"EPSG:3857\") #Web Mercator\n",
+    "\n",
+    "map_chart = gdf.plot_animated(basemap_format={'source':contextily.providers.Stamen.Terrain},cmap='cool')\n",
+    "\n",
+    "cases_df.to_csv('data/nsw-covid-cases-by-postcode.csv')\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "bar_chart = cases_df.sum(axis=1).plot_animated(\n",
+    "    kind='line',\n",
+    "    label_events={\n",
+    "        'Ruby Princess Disembark':datetime.strptime(\"19/03/2020\", \"%d/%m/%Y\"),\n",
+    "        'Lockdown':datetime.strptime(\"31/03/2020\", \"%d/%m/%Y\")\n",
+    "    },\n",
+    "    fill_under_line_color=\"blue\",\n",
+    "    enable_progress_bar=True\n",
+    ")\n",
+    "\n",
+    "map_chart.ax.set_title('Cases by Location')\n",
+    "\n",
+    "grouped_df = pd.read_csv('data/nsw-covid-cases-by-postcode.csv', index_col=0, parse_dates=[0])\n",
+    "\n",
+    "line_chart = (\n",
+    "    grouped_df.sum(axis=1)\n",
+    "    .cumsum()\n",
+    "    .fillna(0)\n",
+    "    .plot_animated(kind=\"line\", period_label=False, title=\"Cumulative Total Cases\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def current_total(values):\n",
+    "    total = values.sum()\n",
+    "    s = f'Total : {int(total)}'\n",
+    "    return {'x': .85, 'y': .2, 's': s, 'ha': 'right', 'size': 11}\n",
+    "\n",
+    "race_chart = grouped_df.cumsum().plot_animated(\n",
+    "    n_visible=5, title=\"Cases by Postcode\", period_label=False,period_summary_func=current_total\n",
+    ")\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "timestr = time.strftime(\"%d/%m/%Y\")\n",
+    "\n",
+    "plots = [bar_chart, line_chart, map_chart, race_chart]\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "rcParams.update({\"figure.autolayout\": False})\n",
+    "\n",
+    "figs = plt.figure()\n",
+    "gs = figs.add_gridspec(2, 3, hspace=0.5)\n",
+    "f3_ax1 = figs.add_subplot(gs[0, :])\n",
+    "f3_ax1.set_title(bar_chart.title)\n",
+    "bar_chart.ax = f3_ax1\n",
+    "\n",
+    "f3_ax2 = figs.add_subplot(gs[1, 0])\n",
+    "f3_ax2.set_title(line_chart.title)\n",
+    "line_chart.ax = f3_ax2\n",
+    "\n",
+    "f3_ax3 = figs.add_subplot(gs[1, 1])\n",
+    "f3_ax3.set_title(map_chart.title)\n",
+    "map_chart.ax = f3_ax3\n",
+    "\n",
+    "f3_ax4 = figs.add_subplot(gs[1, 2])\n",
+    "f3_ax4.set_title(race_chart.title)\n",
+    "race_chart.ax = f3_ax4\n",
+    "\n",
+    "timestr = cases_df.index.max().strftime(\"%d/%m/%Y\")\n",
+    "figs.suptitle(f\"NSW COVID-19 Confirmed Cases up to {timestr}\")\n",
+    "\n",
+    "pandas_alive.animate_multiple_plots(\n",
+    "    'examples/nsw-covid.gif',\n",
+    "    plots,\n",
+    "    figs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![NSW COVID](examples/nsw-covid.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Italy COVID Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas\n",
+    "import pandas as pd\n",
+    "import pandas_alive\n",
+    "import contextily\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "region_gdf = geopandas.read_file('data\\geo-data\\italy-with-regions')\n",
+    "region_gdf.NOME_REG = region_gdf.NOME_REG.str.lower().str.title()\n",
+    "region_gdf = region_gdf.replace('Trentino-Alto Adige/Sudtirol','Trentino-Alto Adige')\n",
+    "region_gdf = region_gdf.replace(\"Valle D'Aosta/VallÃ©e D'Aoste\\r\\nValle D'Aosta/VallÃ©e D'Aoste\",\"Valle d'Aosta\")\n",
+    "\n",
+    "italy_df = pd.read_csv('data\\Regional Data - Sheet1.csv',index_col=0,header=1,parse_dates=[0])\n",
+    "\n",
+    "italy_df = italy_df[italy_df['Region'] != 'NA']\n",
+    "\n",
+    "cases_df = italy_df.iloc[:,:3]\n",
+    "cases_df['Date'] = cases_df.index\n",
+    "pivoted = cases_df.pivot(values='New positives',index='Date',columns='Region')\n",
+    "pivoted.columns = pivoted.columns.astype(str)\n",
+    "pivoted = pivoted.rename(columns={'nan':'Unknown Region'})\n",
+    "\n",
+    "cases_gdf = pivoted.T\n",
+    "cases_gdf['geometry'] = cases_gdf.index.map(region_gdf.set_index('NOME_REG')['geometry'].to_dict())\n",
+    "\n",
+    "cases_gdf = cases_gdf[cases_gdf['geometry'].notna()]\n",
+    "\n",
+    "cases_gdf = geopandas.GeoDataFrame(cases_gdf, crs=region_gdf.crs, geometry=cases_gdf.geometry)\n",
+    "\n",
+    "gdf = cases_gdf\n",
+    "\n",
+    "map_chart = gdf.plot_animated(basemap_format={'source':contextily.providers.Stamen.Terrain},cmap='viridis')\n",
+    "\n",
+    "cases_df = pivoted\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "bar_chart = cases_df.sum(axis=1).plot_animated(\n",
+    "    kind='line',\n",
+    "    label_events={\n",
+    "        'Schools Close':datetime.strptime(\"4/03/2020\", \"%d/%m/%Y\"),\n",
+    "        'Phase I Lockdown':datetime.strptime(\"11/03/2020\", \"%d/%m/%Y\"),\n",
+    "        '1M Global Cases':datetime.strptime(\"02/04/2020\", \"%d/%m/%Y\"),\n",
+    "        '100k Global Deaths':datetime.strptime(\"10/04/2020\", \"%d/%m/%Y\"),\n",
+    "        'Manufacturing Reopens':datetime.strptime(\"26/04/2020\", \"%d/%m/%Y\"),\n",
+    "        'Phase II Lockdown':datetime.strptime(\"4/05/2020\", \"%d/%m/%Y\"),\n",
+    "\n",
+    "    },\n",
+    "    fill_under_line_color=\"blue\",\n",
+    "    enable_progress_bar=True\n",
+    ")\n",
+    "\n",
+    "map_chart.ax.set_title('Cases by Location')\n",
+    "\n",
+    "line_chart = (\n",
+    "    cases_df.sum(axis=1)\n",
+    "    .cumsum()\n",
+    "    .fillna(0)\n",
+    "    .plot_animated(kind=\"line\", period_label=False, title=\"Cumulative Total Cases\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def current_total(values):\n",
+    "    total = values.sum()\n",
+    "    s = f'Total : {int(total)}'\n",
+    "    return {'x': .85, 'y': .2, 's': s, 'ha': 'right', 'size': 11}\n",
+    "\n",
+    "race_chart = cases_df.cumsum().plot_animated(\n",
+    "    n_visible=5, title=\"Cases by Region\", period_label=False,period_summary_func=current_total\n",
+    ")\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "timestr = time.strftime(\"%d/%m/%Y\")\n",
+    "\n",
+    "plots = [bar_chart, race_chart, map_chart, line_chart]\n",
+    "\n",
+    "# Otherwise titles overlap and adjust_subplot does nothing\n",
+    "from matplotlib import rcParams\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "\n",
+    "rcParams.update({\"figure.autolayout\": False})\n",
+    "\n",
+    "figs = plt.figure()\n",
+    "gs = figs.add_gridspec(2, 3, hspace=0.5)\n",
+    "f3_ax1 = figs.add_subplot(gs[0, :])\n",
+    "f3_ax1.set_title(bar_chart.title)\n",
+    "bar_chart.ax = f3_ax1\n",
+    "\n",
+    "f3_ax2 = figs.add_subplot(gs[1, 0])\n",
+    "f3_ax2.set_title(race_chart.title)\n",
+    "race_chart.ax = f3_ax2\n",
+    "\n",
+    "f3_ax3 = figs.add_subplot(gs[1, 1])\n",
+    "f3_ax3.set_title(map_chart.title)\n",
+    "map_chart.ax = f3_ax3\n",
+    "\n",
+    "f3_ax4 = figs.add_subplot(gs[1, 2])\n",
+    "f3_ax4.set_title(line_chart.title)\n",
+    "line_chart.ax = f3_ax4\n",
+    "\n",
+    "axes = [f3_ax1, f3_ax2, f3_ax3, f3_ax4]\n",
+    "timestr = cases_df.index.max().strftime(\"%d/%m/%Y\")\n",
+    "figs.suptitle(f\"Italy COVID-19 Confirmed Cases up to {timestr}\")\n",
+    "\n",
+    "pandas_alive.animate_multiple_plots(\n",
+    "    'examples/italy-covid.gif',\n",
+    "    plots,\n",
+    "    figs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Italy COVID](examples/italy-covid.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### HTML 5 Videos\n",
     "\n",
     "`Pandas_Alive` supports rendering HTML5 videos through the use of `df.plot_animated().get_html5_video()`. `.get_html5_video` saves the animation as an h264 video, encoded in base64 directly into the HTML5 video tag. This respects the rc parameters for the writer as well as the bitrate. This also makes use of the interval to control the speed, and uses the repeat parameter to decide whether to loop.\n",
@@ -653,17 +942,10 @@
     "\n",
     "A list of future features that may/may not be developed is:\n",
     "\n",
-    "- Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))\n",
-    "    - This is currently working at a proof of concept level, stay tuned!\n",
+    "- ~~Geographic charts (currently using OSM export image, potential [geopandas](https://geopandas.org/))~~\n",
     "- ~~Loading bar support (potential [tqdm](https://github.com/tqdm/tqdm) or [alive-progress](https://github.com/rsalmei/alive-progress))~~\n",
-    "- Potentially support writing to GIF in memory with <https://github.com/maxhumber/gif>\n",
-    "- Support custom figures & axes for multiple plots (eg, gridspec)\n",
-    "\n",
-    "Some charts that was built using a development branch of Pandas_Alive is:\n",
-    "\n",
-    "[![NSW COVID19 Cases](examples/nsw-covid.gif)](https://www.youtube.com/watch?v=hkn-RXY_qUo)\n",
-    "\n",
-    "[![Italy COVID19 Cases](examples/italy-covid.gif)](https://youtu.be/vxAjqgFSRvQ)"
+    "- ~~Potentially support writing to GIF in memory with <https://github.com/maxhumber/gif>~~\n",
+    "- ~~Support custom figures & axes for multiple plots (eg, gridspec)~~"
    ]
   },
   {
@@ -689,9 +971,7 @@
     "- [ImageMagick](https://imagemagick.org/index.php)\n",
     "- See more at <https://matplotlib.org/3.2.1/api/animation_api.html#writer-classes>\n",
     "\n",
-    "> Outputting to GIF file type is only supported by ImageMagick\n",
-    "\n",
-    "> Pillow is not supported currently, please submit a PR if you can make Pillow work!\n",
+    "> If the output file name has an extension of `.gif`, `pandas_alive` will write this with `PIL` in memory\n",
     "\n",
     "## Documentation\n",
     "\n",
