Update README and optimize gifs
Former-commit-id: 058a845cefe0d9979516c62ce95c370e044ef208 [formerly 92f4ece08fddd2f98e5a58e1f6b5c3aa0c9a3de1]
Former-commit-id: 3d9bca9d7cbfaf8f3256aaa60509eab8a29b4c9a

--- a/README.ipynb
+++ b/README.ipynb
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### NSW COVID Visualisation"
+    "#### NSW COVID Visualisation"
    ]
   },
   {
@@ -742,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Italy COVID Visualisation"
+    "#### Italy COVID Visualisation"
    ]
   },
   {
