Add links to tutorials in README
Former-commit-id: 4b76ca45a19a87b70b126b73707e3e37ac0207d8 [formerly 58ba788a352c973e7c9287b46b01f35d762da380]
Former-commit-id: b84caa4332e483c2d6a2222a05a13bd763960419

--- a/README.ipynb
+++ b/README.ipynb
@@ -948,6 +948,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tutorials\n",
+    "\n",
+    "Find tutorials on how to use `Pandas_Alive` over at:\n",
+    "\n",
+    "- <https://jackmckew.dev/creating-animated-plots-with-pandas_alive.html>\n",
+    "- <https://jackmckew.dev/geopandas-and-pandas-alive.html>\n",
+    "\n",
     "## Inspiration\n",
     "\n",
     "The inspiration for this project comes from:\n",
