Several fixes + additions

--- a/README.ipynb
+++ b/README.ipynb
@@ -381,11 +381,7 @@
     "#### Bubble Chart Example 2\n",
     "Jupyter notebook: [pendulum_sample.ipynb](examples/test_notebooks/pendulum_sample.ipynb)\n",
     "\n",
-    "<!-- blank line -->\n",
-    "<video src=\"./examples/test_notebooks/pend-bubble.mp4\" type=\"video/mp4\" controls muted autoplay>\n",
-    "      Your browser does not support the <code>video</code> element.\n",
-    "</video>\n",
-    "<!-- blank line -->"
+    "![Bubble Chart Example](examples/test_notebooks/pend-bubble.gif)"
    ]
   },
   {
@@ -910,11 +906,7 @@
     "### Simple Pendulum Motion\n",
     "Jupyter notebook: [pendulum_sample.ipynb](examples/test_notebooks/pendulum_sample.ipynb)\n",
     "\n",
-    "<!-- blank line -->\n",
-    "<video src=\"./examples/test_notebooks/pend-combined-2.mp4\" type=\"video/mp4\" controls muted autoplay>\n",
-    "      Your browser does not support the <code>video</code> element.\n",
-    "</video>\n",
-    "<!-- blank line -->"
+    "![Bubble Chart Example](examples/test_notebooks/pend-combined-2.gif)"
    ]
   },
   {
