--- a/examples/test_notebooks/pendulum_sample.ipynb
+++ b/examples/test_notebooks/pendulum_sample.ipynb
@@ -566,7 +566,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fcd029fdd01402da85a9161470fc676",
+       "model_id": "5d41409229b2498e94bbd6468813d0d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +654,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6d70a465fcb4ccfbe44a1e9a11ad337",
+       "model_id": "6635e4b65a0d40b8b5f69467f8e62ad2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -737,7 +737,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f3d6c43135149a5b8cc8bd575286922",
+       "model_id": "419cb1ff272141649b28a8a140785ca2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -819,7 +819,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6264530a144f473993d8bcc8bffdd2bb",
+       "model_id": "91b60399e3f34dab9be513c27a53b6e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -849,7 +849,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
     "\n",
     "# pandas_alive\n",
     "bubble_chart = df2.plot_animated(\n",
-    "    kind=\"bubble\", filename=\"pend-bubble.mp4\",\n",
+    "    kind=\"bubble\", filename=\"pend-bubble.gif\",\n",
     "    x_data_label=\"dx (m)\", y_data_label=\"dy (m)\", \n",
     "    size_data_label=\"size\", color_data_label=\"ang_vel\", cmap=\"jet\",\n",
     "    period_label={'x':0.05,'y':0.9}, vmin=None, vmax=None,\n",
@@ -908,7 +908,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12ed41a2b9874dc480a55ae52bdb243b",
+       "model_id": "faa6b0eb4a974e8bb72dec4c2a3c917e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1001,7 +1001,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b114a68252f4061a9f4431aee0d6d00",
+       "model_id": "e128fd0fdef5420aa2cef4b2261ba016",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1030,7 +1030,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
     "plots = [scatter_chart, race_chart, bubble_chart]\n",
     "# pandas_alive combined using custom figure\n",
     "pandas_alive.animate_multiple_plots(\n",
-    "    filename='./pend-combined-2.mp4', plots=plots, custom_fig=figs2, dpi=100, enable_progress_bar=True,\n",
+    "    filename='./pend-combined-2.gif', plots=plots, custom_fig=figs2, dpi=100, enable_progress_bar=True,\n",
     "    adjust_subplot_left=0.2, adjust_subplot_right=None,\n",
     "    title=\"Simple pendulum animations, L=\"+str(L)+\"m\", title_fontsize=\"medium\"\n",
     ")\n",
